# foyer-studio

./: .env  .gitignore  .gitignore.tmp  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  foyer-studio.code-workspace  install.sh
.devcontainer/: .user-post-install.sh  Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
crates/foyer-backend/: Cargo.toml
crates/foyer-backend-host/: Cargo.toml
crates/foyer-backend-host/src/: client.rs  discovery.rs  lib.rs  waveform.rs
crates/foyer-backend-host/tests/: fake_shim.rs
crates/foyer-backend-stub/: Cargo.toml
crates/foyer-backend-stub/src/: actions.rs  fixtures.rs  jail.rs  lib.rs  regions.rs  state.rs  waveform.rs
crates/foyer-backend/src/: actions.rs  lib.rs
crates/foyer-cli/: Cargo.toml  build.rs
crates/foyer-cli/src/: main.rs
crates/foyer-config/: Cargo.toml
crates/foyer-config/defaults/: roles.yaml
crates/foyer-config/src/: lib.rs  roles.rs
crates/foyer-desktop/: Cargo.toml
crates/foyer-desktop/src/: main.rs
crates/foyer-ipc/: Cargo.toml
crates/foyer-ipc/src/: codec.rs  frame.rs  lib.rs
crates/foyer-schema/: Cargo.toml
crates/foyer-schema/src/: action.rs  audio.rs  fs.rs  id.rs  io.rs  lib.rs  message.rs  midi.rs  plugin.rs  session.rs  timeline.rs  tunnel.rs  value.rs
crates/foyer-server/: Cargo.toml
crates/foyer-server/src/: audio.rs  audio_opus.rs  audio_ws.rs  chat.rs  cloudflare_api.rs  cloudflare_provider.rs  cloudflared_dl.rs  dev.rs  files.rs  ingress_ws.rs  jail.rs  lib.rs  orphans.rs  ring.rs  sessions.rs  tunnel.rs  tunnel_provider.rs  ws.rs
crates/foyer-server/tests/: ws_integration.rs
docs/: ARCHITECTURE.md  AUDIO_EGRESS.md  DECISIONS.md  DEVELOPMENT.md  HANDOFF-2026-04-24.md  HANDOFF.md  KEYBOARD.md  PLAN-2026-04-23.md  PLAN-overnight-2026-04-20.md  PLAN-overnight-2026-04-21.md  PLAN.md  SECURITY.md  STATUS.md  TODO.md
docs/ardour-patches/: 001-register-foyer-shim.patch  002-hardour-backend-env.patch
docs/old/: HANDOFF.md  PLAN.md  PROPOSAL-auth-gateway.md  PROPOSAL-surface-auto-discovery.md
scripts/: bootstrap-workspace.sh  populate-demo-session.lua
scripts/dev/: ardour.sh  autovocoder.sh  jack.sh  nuke-web-install.sh  shim.sh  tw.sh  ui-probe.sh  ui-test.sh
scripts/release/: bundle.sh
shims/ardour/: CMakeLists.txt  README.md  wscript
shims/ardour/src/: dispatch.cc  dispatch.h  interface.cc  ipc.cc  ipc.h  master_tap.cc  master_tap.h  msgpack_out.cc  msgpack_out.h  schema_map.cc  schema_map.h  session_uuid.cc  session_uuid.h  shim_input_port.cc  shim_input_port.h  signal_bridge.cc  signal_bridge.h  surface.cc  surface.h
tests-ui/: package.json  playwright.config.js  probe.js
tests-ui/specs/: chrome.spec.js  smoke.spec.js
web/: HACKING.md  boot.js  debug-curves.html  index.html  tester.html
web/core/: bootstrap.js  chat.js  index.js  markdown.js  mixer-density.js  music-theory.js  package.js  param-scale.js  recents.js  region-cache.js  store.js  ws.js
web/core/audio/: audio-ingress.js  audio-listener.js  ingress-worklet.js  master-controller.js
web/core/automation/: parser.js  runtime.js
web/core/registry/: features.js  ui-variants.js  views.js  widgets.js
web/src/: agent-settings.js  app.js  icons.js  mixer-density.js  rbac.js  screens.js  session-launch.js  shared-styles.js  store.js  transport-return.js  transport-settings.js  ws.js
web/src/audio/: midi-preview.js
web/src/automation/: runtime.js  toast.js
web/src/components/: agent-panel.js  agent-settings-modal.js  automation-lane.js  automation-panel.js  backend-lost-modal.js  beat-sequencer.js  command-palette.js  confirm-modal.js  console-view.js  context-menu.js  diagnostics.js  fader.js  group-manager-modal.js  knob.js  layout-fab.js  login-modal.js  main-menu.js  meter.js  midi-editor.js  midi-manager.js  midi-strip.js  mixer.js  nav-bar.js  pan-editor-modal.js  param-control.js  plugin-panel.js  plugin-picker-modal.js  plugin-strip.js  plugins-view.js  preview-modal.js  project-picker-modal.js  prompt-modal.js  quadrant-fab.js  right-dock.js  session-switcher.js  session-view.js  settings-modal.js  share-modal.js  startup-errors.js  status-bar.js  (+9 more)
web/src/layout/: drop-zones.js  floating-tiles.js  keybinds.js  layout-store.js  plugin-layer.js  plugin-packer.js  slot-picker.js  slots.js  text-preview.js  tile-container.js  tile-leaf.js  tile-tree.js  waveform-cache.js
web/src/viz/: audio-ingress.js  audio-listener.js  audio-worklet.js  viz-picker.js  viz-settings.js  waveform-gl.js  waveform-shader.js
web/styles/: tw.css
web/ui-core/: fallback-ui.js  icons.js  index.js  package.js  theme.js  typing-guard.js
web/ui-core/layout/: drop-zones.js  floating-tiles.js  keybinds.js  layout-bindings.js  layout-store.js  plugin-layer.js  slot-keybinds.js  slot-picker.js  tile-container.js  tile-leaf.js  tile-tree.js
web/ui-core/viz/: gl.js  viz-picker.js  viz-settings.js  waveform-gl.js
web/ui-core/widgets/: confirm-modal.js  context-menu.js  knob.js  number-scrub.js  param-control.js  preview-modal.js  prompt-modal.js  share-modal.js  window-list.js  window.js
web/ui-full/: app.js  package.js  session-launch.js
web/ui-full/components/: actions-fab.js  agent-panel.js  agent-settings-modal.js  automation-lane.js  automation-panel.js  backend-lost-modal.js  beat-sequencer.js  chat-panel.js  command-palette.js  console-view.js  diagnostics.js  fab-stack.js  group-manager-modal.js  layout-fab.js  login-modal.js  main-menu.js  midi-editor.js  midi-manager.js  midi-strip.js  mixer.js  nav-bar.js  node-graph.js  pan-editor-modal.js  plugin-panel.js  plugin-picker-modal.js  plugin-strip.js  plugins-view.js  project-picker-modal.js  quadrant-fab.js  right-dock.js  session-info-fab.js  session-switcher.js  session-view.js  settings-modal.js  startup-errors.js  status-bar.js  timeline-view.js  track-editor-modal.js  track-strip.js  transport-bar.js  (+3 more)
