[workspace]
resolver = "2"
members = [
    "crates/foyer-schema",
    "crates/foyer-ipc",
    "crates/foyer-backend",
    "crates/foyer-backend-stub",
    "crates/foyer-backend-host",
    "crates/foyer-server",
    "crates/foyer-cli",
    "crates/foyer-desktop",
    "crates/foyer-config",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-2.0-or-later"
rust-version = "1.75"
authors = ["Foyer Studio Contributors"]
repository = "https://github.com/foyer-studio/foyer-studio"

[workspace.dependencies]
# internal crates
foyer-schema        = { path = "crates/foyer-schema" }
foyer-ipc           = { path = "crates/foyer-ipc" }
foyer-backend       = { path = "crates/foyer-backend" }
foyer-backend-stub  = { path = "crates/foyer-backend-stub" }
foyer-backend-host  = { path = "crates/foyer-backend-host" }
foyer-server        = { path = "crates/foyer-server" }
foyer-cli           = { path = "crates/foyer-cli" }
foyer-desktop       = { path = "crates/foyer-desktop" }
foyer-config        = { path = "crates/foyer-config" }

# serde stack
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1"

# async
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "fs"] }
futures     = "0.3"
async-trait = "0.1"

# ids, time, errors
uuid        = { version = "1", features = ["v4", "serde"] }
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# audio
rubato      = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
