[workspace]
resolver = "2"
members = [
    "crates/foyer-schema",
    "crates/foyer-ipc",
    "crates/foyer-backend",
    "crates/foyer-backend-stub",
    "crates/foyer-backend-host",
    "crates/foyer-server",
    "crates/foyer-cli",
    "crates/foyer-desktop",
    "crates/foyer-config",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# All Rust crates in this workspace are Apache-2.0. The repo's GPL
# zone is confined to `shims/ardour/` (which links libardour and is
# NOT in this workspace). See top-level LICENSE for the split, and
# DECISIONS.md entry 15 for the rationale. Earlier this was set to
# `GPL-2.0-or-later` and propagated to every crate via
# `license.workspace = true` — wrong: published crate metadata would
# claim copyleft on code that's actually permissive.
license = "Apache-2.0"
rust-version = "1.75"
authors = ["Foyer Studio Contributors"]
repository = "https://github.com/foyer-studio/foyer-studio"

[workspace.dependencies]
# internal crates
foyer-schema        = { path = "crates/foyer-schema" }
foyer-ipc           = { path = "crates/foyer-ipc" }
foyer-backend       = { path = "crates/foyer-backend" }
foyer-backend-stub  = { path = "crates/foyer-backend-stub" }
foyer-backend-host  = { path = "crates/foyer-backend-host" }
foyer-server        = { path = "crates/foyer-server" }
foyer-cli           = { path = "crates/foyer-cli" }
foyer-desktop       = { path = "crates/foyer-desktop" }
foyer-config        = { path = "crates/foyer-config" }

# serde stack
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1"

# async
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "fs"] }
futures     = "0.3"
async-trait = "0.1"

# ids, time, errors
uuid        = { version = "1", features = ["v4", "serde"] }
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# audio
rubato      = "0.15"
# Opus codec for the M6a egress path. Uses `audiopus` (libopus bindings)
# — production-grade, standardized browser support via WebCodecs.
audiopus    = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
