[package]
name = "foyer-backend-stub"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "In-memory stub backend for Foyer — demo mode and frontend dev without a DAW."

[dependencies]
foyer-schema.workspace = true
foyer-backend.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
