[package]
name = "foyer-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DAW-agnostic domain schema types for Foyer Studio."

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
