[package]
name = "foyer-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket server + client fan-out. Library entrypoint is Server::run()."

[dependencies]
foyer-schema.workspace = true
foyer-backend.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

[dev-dependencies]
foyer-backend-stub.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
tokio-tungstenite = "0.24"
