[package]
name = "foyer-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebSocket server + client fan-out. Library entrypoint is Server::run()."

[dependencies]
foyer-schema.workspace = true
foyer-backend.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "process", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
hostname = "0.4"
dirs = "5"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
local-ip-address = "0.6"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.7", features = ["ws"] }
# TLS: pure-Rust via rustls. `axum-server` feature `tls-rustls`
# replaces `axum::serve` on the listening side; it uses `rustls` +
# `ring` under the hood — both static-link cleanly against musl
# (no openssl/libssl/libcrypto, no glibc dep). `default-features =
# false` would drop rustls-default crypto provider selection, so
# we keep defaults here and let the rustls ecosystem pick `ring`.
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
# M6a audio egress pipeline: libopus bindings + rubato resampler.
audiopus = { workspace = true }
rubato = { workspace = true }
# Tunnel / remote-access support: token hashing, key generation, temp manifest writes.
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tempfile = "3"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
# Embedded tunnel providers (pure Rust, no external executables).
# WARNING: ngrok support is NOTIONAL / UNTESTED. It compiles and the code
# path is wired through `NgrokProvider`, but it has not been exercised end
# to end against a real ngrok account — cloudflared is the supported
# provider today. Left behind the `ngrok` feature flag so it can be
# revisited later without bit-rotting the code. Enable at your own risk:
#     cargo build -p foyer-server --features ngrok
ngrok = { version = "0.18", features = ["axum"], optional = true }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
foyer-config.workspace = true
open = "5"
urlencoding = "2"
# Explicit rustls with ring crypto provider to avoid runtime panic when
# multiple providers (ring + aws-lc-rs) are present in the dependency tree.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

[features]
# Default is cloudflare-only. See the note on the `ngrok` dep above —
# the ngrok path is notional and off by default until someone verifies
# it end to end.
default = []
ngrok = ["dep:ngrok"]

[dev-dependencies]
foyer-backend-stub.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
tokio-tungstenite = "0.24"
